# json

./: .gitignore  LICENSE  Makefile  Makefile.am  README  all.h  array.c  array.h  config.mk  configure.ac  json.c  json.h  makefile  object.c  object.h  old_makefile  test.c  test.json  test2.c  value.c  value.h
src/: all.h  array.c  json11.h  object.c  parser.c  value.c  value.h
test/: test.c  test2.c
tests/: object-add-test.c
